--- a/css/style-home.css
+++ b/css/style-home.css
@@ -1,119 +1,48 @@
-header {
-    background: #bbbbbb;
+#banner {
+	width:100%;
 }
 
-.caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-}
-
-nav {
-    position: absolute;
-    top: 110px;
-    right: 0px;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-}
-
-nav a {
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: white;
-    text-decoration: underline;
-}
-
-#barbearia {
-    width: 100%;
-}
-
-.principal {
-    background: #ffffff;
-    padding: 20px;
+.principal{
+	background: #CCCCCC;
+	padding: 30px;
 }
 
 .titulo-principal {
-    padding-left: 20px;
-    color: black;
-    text-align: center;
+	padding-left: 20px;
 }
 
-.centralizado {
-    text-align: center;
-    font-weight: bold;
+.titulo-centralizado {
+	text-align: center
 }
 
 p {
-    text-align: center
+	text-align: center;
 }
 
 #missao {
-    font-size: 20px
+	font-size: 20px
 }
 
 em strong {
-    color: #FF0000;
+	color: #FF0000;
 }
 
 .itens {
-    font-style: italic;
-    color: #CCCCCC
+	font-style: italic
 }
 
 .beneficios {
-    padding-top: 0px;
-    width: auto;
-    height: 350px;
+	background: #FFFFFF;
+	padding: 20px;
 }
 
-#text-footer ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 40%;
-    margin-right: 1%;
+ul {
+	display: inline-block;
+	vertical-align: top;
+	width: 20%;
+	margin-right: 15%;
 }
 
 .imagembeneficios {
-    width: 100%;
-    height: 350px;
-}
-
-#div1-footer {
-    background: #000000;
-    float: left;
-    text-align: center;
-    width: 50%;
-    height: 100%;
-}
-
-#text-footer {
-    font-size: 25px;
-    padding-top: 50px;
-}
-
-#div2-footer {
-    float: right;
-    width: 50%;
-    height: 100%;
-}
-
-footer {
-    text-align: center;
-    background: url("https://cdn.shortpixel.ai/client/to_webp,q_glossy,ret_img,w_1920/https://home.unicruz.edu.br/wp-content/uploads/revslider/u-revo-slider/Slide1-BG.jpg");
-    padding: 40px 0;
-}
-
-.copyright {
-    color: #ffffff;
-    font-size: 13px;
-    margin: 20px 0 0;
+	width: 50%;
 }
